--- a/rust_vanity_generator/Cargo.toml
+++ b/rust_vanity_generator/Cargo.toml
@@ -22,3 +22,7 @@ ctrlc = "3.4"
 # Bitcoin-related dependencies
 bitcoin = { version = "0.31.0", features = ["rand"] }
 bip39 = "1.2.0"
+
+# Platform-specific dependencies
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }
